# ChangeLog for gnome-base/gnome-desktop
# Copyright 2002-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/gnome-base/gnome-desktop/ChangeLog,v 1.243 2009/04/28 11:19:26 armin76 Exp $

  28 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.24.3.ebuild:
  sh stable

  27 Apr 2009; Jeroen Roovers <jer@gentoo.org> gnome-desktop-2.24.3:
  Stable for HPPA (bug #260063).

  27 Apr 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.24.3.ebuild:
  arm stable

  24 Apr 2009; Gilles Dartiguelongue <eva@gentoo.org>
  gnome-desktop-2.24.3-r1.ebuild:
  Add gnome-common to DEPEND, bug #267173

*gnome-desktop-2.24.3-r1 (22 Apr 2009)

  22 Apr 2009; Mart Raudsepp <leio@gentoo.org> gnome-desktop-2.20.3.ebuild,
  -gnome-desktop-2.24.2.ebuild, -gnome-desktop-2.24.2-r1.ebuild,
  +gnome-desktop-2.24.3-r1.ebuild:
  Fix translation installation when LINGUAS is set. Remove old

  12 Apr 2009; Friedrich Oslage <bluebird@gentoo.org>
  gnome-desktop-2.24.3.ebuild:
  Stable on sparc, bug #260063

  18 Mar 2009; Raúl Porcel <armin76@gentoo.org>
  gnome-desktop-2.24.3.ebuild:
  alpha/ia64 stable wrt #260063

  15 Mar 2009; Markus Meier <maekke@gentoo.org> gnome-desktop-2.24.3.ebuild:
  x86 stable, bug #260063

  11 Mar 2009; Daniel Gryniewicz <dang@gentoo.org>
  gnome-desktop-2.24.3.ebuild:
  Marked stable on amd64

  06 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-desktop-2.24.3.ebuild:
  Marking gnome-desktop-2.24.3 ppc stable for bug 260063

  05 Mar 2009; Brent Baude <ranger@gentoo.org> gnome-desktop-2.24.3.ebuild:
  Marking gnome-desktop-2.24.3 ppc64 stable for bug 260063

*gnome-desktop-2.24.3 (13 Jan 2009)

  13 Jan 2009; Rémi Cardona <remi@gentoo.org> +gnome-desktop-2.24.3.ebuild:
  bump to 2.24.3 (minor code cleanups)

*gnome-desktop-2.24.2-r1 (04 Jan 2009)

  04 Jan 2009; Gilles Dartiguelongue <eva@gentoo.org>
  +files/gnome-desktop-2.24.2-background.patch,
  +gnome-desktop-2.24.2-r1.ebuild: