@@ -1,10 +1,8 @@
 AUX gnome-desktop-2.24.2-background.patch 886 RMD160 032349d5797ce2333a961a214bf078138ab16010 SHA1 6e271f942e130cf1f5020d1d7ab9f64f81903fc0 SHA256 cbe72e1e9f8b4891cbbe321ab7f6e16ca98fbdf05a5c833dbf5dfb8135173457
-DIST gnome-desktop-2.20.3.tar.bz2 1362861 RMD160 4c01a18cad9dd4965abe1202bccc9bf414e04287 SHA1 6d88e63686acea78e0e64efa9f213271a7ddf32e SHA256 b793ce87b99ba2f9b0eb48a4646128f752a1de2e7c4cd94da9b5e9fd6dcbc36a
-DIST gnome-desktop-2.22.3.tar.bz2 1444103 RMD160 f1bbba787e3924df0fac25c56f3d70334097ad1f SHA1 89d7938a73735e6e2d1309f36d5a4be47eb41cca SHA256 10c087e16c530eb2d09c5794ba5c0d6d2ec6e548860e13f31b2f2375df964dc9
 DIST gnome-desktop-2.24.3.tar.bz2 1509505 RMD160 b6489965a0baa6056b5c7826418401459ffbf0b9 SHA1 2ebbf2475bb741131b523819fb46e71d4489fa79 SHA256 03b1e08ee1318820f538864e8db492a245848bd727da1412a62de51d4cb76e89
-EBUILD gnome-desktop-2.20.3.ebuild 1303 RMD160 23888da1909bcfe314290eb87d2ae9b55dbc60f3 SHA1 1b96f4d0ccd8dc3cbe2e146aa0796e72284400c5 SHA256 430dd2976f7402dadd82ff3417699c44b8034b62869e4f3f53eafd480355965d
-EBUILD gnome-desktop-2.22.3.ebuild 1359 RMD160 ca1b80a67fa19a19bd832da3e53528a808633abe SHA1 1a6b5dfa489cecb360a0a60b0ef5ccb84c78978d SHA256 83472383dcc2dfc7d8f9dcf77b8e234d13f371abc98df84ecac866294b3960fc
+DIST gnome-desktop-2.26.1.tar.bz2 3228329 RMD160 12456ea4f356b5e6b772b077ca23e0d8d59ffccb SHA1 236e8c63cdb8ae4bc2ebae662a1fac88e09c2747 SHA256 a0341c77360dbb23fbad61987ce9f78f9bfc11ac12e48f60cb049359b4b76d7d
 EBUILD gnome-desktop-2.24.3-r1.ebuild 1922 RMD160 91a1ca90bf9ce3efa2a7f6c089af78c702a2e44b SHA1 f4ed6c055633b4d25e4781fe05531ea43d5c556a SHA256 ab38ab536f832496eba8af98edc3a0bca495ecc7d5622d1cbdd4750f18837334
 EBUILD gnome-desktop-2.24.3.ebuild 1752 RMD160 465304becf9514af5f0aa6b519fc006af27ab442 SHA1 12896922abcba90ca070b1b1c556a550192e4e03 SHA256 00811de9cfb311d2ffe3805b08d51045a1437b3ca68520a8498c7b5efd364fea
-MISC ChangeLog 30898 RMD160 25c7ed2a1ac74501323f2699bdc47432df3d94a9 SHA1 27bdd615c8a9a6bd4db043d3a65795d0b52de208 SHA256 96050ea85eb5b81262aa924264b770055583798e55371a8b7d468ee29f45f800
+EBUILD gnome-desktop-2.26.1.ebuild 1477 RMD160 e5d4e47211062d4ee5bb287ef95c2ab1354c3e3d SHA1 8a2289da6eb61b1dd1691af57d43d62b2fef1b35 SHA256 be549b813d038a552a82c6dbb9bcbc6d4a83d6e0915276f1e10510577e9c6065
+MISC ChangeLog 31253 RMD160 92575b356fd4171cc2b0844ecfda926d2ad67af4 SHA1 1457ef6f47975c51665bdd88c483ca0955f428d6 SHA256 741136adf551a68fb34c54c3779b44c3dc0a044cbceef471deb3cbb2ddd8cf1e
 MISC metadata.xml 158 RMD160 c0e2bae8e91bb6be8922bac5e4f597302e06587e SHA1 38f78e9790bcd4382b4a49aa226aa6dda1d3a3d7 SHA256 3a7dbca0fdc557de69783e0663e2d76ddab129ea8a19b2d0ef6d3e5d1b947ce1
